Set up Docker build and run

--- a/pdnn-docker/Dockerfile
+++ b/pdnn-docker/Dockerfile
@@ -1,7 +1,10 @@
 FROM tensorflow/tensorflow:latest-gpu-py3-jupyter
 
+# Basic packages
 RUN apt-get update \
 && pip install --upgrade pip \
 && pip install matplotlib \
 && pip install keras \
-&& pip install scikit-learn
+&& pip install scikit-learn \
+&& pip install jupyterlab
+
